--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                 </div>
       
-                <div class="col-2 menu-item filter-specialty"> <!--col-lg-6-->
+                <div class="col-2 menu-item filter-specialty">
                     <img src="img/Menu3.jpg" class="menu-img" alt="">
                     <div class="menu-content">
                         <a href="#">grilled meet</a><span>$26.95</span>
@@ -541,7 +541,7 @@
     <section class="gallery" id="gallery">
         <div class="gallery">
 
-        <h1>Gallery</h1>
+        <h2 class="gallery-heading">gallery</h2>
 
         <div class="main-gallery">
             <div class="inner-gallery">
@@ -811,6 +811,9 @@
 
     <!-- reservation section start -->
     <section class="reservation" id="reservation">
+
+        <h2 class="reservation-heading">book a table</h2>
+
         <div class="image"></div>
         <div class="form">
             <h1 class="heading">book a table</h1>
