--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <i class="fas fa-times" id="close"></i>
     </form>
 
-	<!-- Home section start -->
+<!-- Home section start -->
     <div class="home" id="home">
 		<div class="swiper home-slider">
 			<div class="swiper-wrapper wrapper">
@@ -68,6 +68,7 @@
                         <div class="content2">
                             <h3>sale of 20% this dish</h3>
 						    <h1>the fresh</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eius dignissimos architecto.<br> Maxime consequatur porro, quas possimus illum omnis quis quo officia nesciunt, <br> obcaecati esse itaque corrupti! Reprehenderit, veritatis voluptatem.</p>
                             <p>food restaurant</p>
 						    <a href="#" class="btn">order now</a>
                         </div>
@@ -79,6 +80,7 @@
                         <div class="content3">
 						    <h3>we are open</h3>
 						    <h1>Fresh Food</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eius dignissimos architecto.<br> Maxime consequatur porro, quas possimus illum omnis quis quo officia nesciunt, <br> obcaecati esse itaque corrupti! Reprehenderit, veritatis voluptatem.</p>
                             <p>you will love it</p>
 						    <a href="#" class="btn">order now</a>
                         </div>
@@ -90,7 +92,8 @@
 					<div class="content">
                         <div class="content4">
 						   <h3>sale of 20% this dish</h3>
-						   <h1>the fresh</h1>
+						   <h1> Delicious Restaurant</h1>
+                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eius dignissimos architecto.<br> Maxime consequatur porro, quas possimus illum omnis quis quo officia nesciunt, <br> obcaecati esse itaque corrupti! Reprehenderit, veritatis voluptatem.</p>
                            <p>food restaurant</p>
 						   <a href="#" class="btn">order now</a>
                         </div>
