--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 	</header>
 	<!-- header section end -->
 
-    <!-- search form -->
-
+    <!-- search form start -->
     <form action="" id="search-form">
         <input type="search" placeholder="Search here..." name="" id="search-box">
         <label for="search-box" class="fas fa-search"></label>
         <i class="fas fa-times" id="close"></i>
     </form>
+    <!-- search form end -->
 
-<!-- Home section start -->
+	<!-- Home section start -->
     <div class="home" id="home">
 		<div class="swiper home-slider">
 			<div class="swiper-wrapper wrapper">
@@ -138,6 +138,45 @@
         </div>
     </section>
     <!-- About Section end-->
+
+    <!-- Why Us Section start-->
+    <section id="why-us" class="why-us">
+        <div class="container" data-aos="fade-up">
+
+          <div class="section-title">
+            <p>Why Choose Our Restaurant</p>
+          </div>
+  
+          <div class="row">
+  
+            <div>
+              <div class="box">
+                <span>01</span>
+                <h4>Breakfast</h4>
+                <p>We know that breakfast is described as the most important meal of the day, and we care about your health, so you will find with us all our delicious breakfast items.</p>
+              </div>
+            </div>
+  
+            <div>
+              <div class="box">
+                <span>02</span>
+                <h4>Lunch</h4>
+                <p>We offer you ready-made meals with a stunning look because we consider them to be one of the most delicious meals, so our restaurant ranks first in our list of the best restaurant sites</p>
+              </div>
+            </div>
+  
+            <div>
+              <div class="box">
+                <span>03</span>
+                <h4>Dinner</h4>
+                <p>We offer you healthy, delicious snacks in different varieties with a stunning appearance <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat eaque</p>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+    </section>
+    <!-- Why Us Section End -->
 
     <!-- Menu Section Start-->
     <section class="menu section-bg" id="Menu">
@@ -251,7 +290,7 @@
         </div>
     </section>
     <!-- Menu Section end-->
-       
+
      <!-- clients Section Start-->
     <section class="section Clients" id="Clients">
 
