--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		</div>
 	</div>
 	<!-- Home section ends -->
-    
+    <img title="home image for appearing when sending page link" style="position:absolute; left:-1; width:0; heihgt: 0;" src="https://th.bing.com/th/id/OIP.vl5RiKROnJ_hIvvE0L4elQHaEK?pid=ImgDet&rs=1">
     <!-- About Section start-->
     <section class="section about" id="about">
         <h2 class="about-heading">about</h2>
