--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Restaurant website template with html and css</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
+	<link rel="image_src" href="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1" /> 
+	<meta name="twitter:image" property="og:image" content="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1" />
 	<!-- custom css file link -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 
