--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
 	<title>Restaurant website template with html and css</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 	<meta property="og:image" content="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1">
-	<meta property="og:image:type" content="image/png">
-	<meta property="og:image:width" content="1024">
-	<meta property="og:image:height" content="1024"
+	<meta property="og:site_name" content="$site_name" />
+<meta property="og:url" content="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1" />
+<meta property="og:type" content="website" />
+<meta name="title" property="og:title" content="resturant website" />
+<meta name="image" property="og:image" content="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1"/>
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1024">
+<meta property="og:image:height" content="1024">
+<meta name="description" property="og:description" content="responsive resturant website " />
+<meta name="twitter:card" content="this's webs ite for testing" />
+<meta name="twitter:site" description="@albhoffy" />
+<meta name="twitter:title" content="resturant" />
+<meta name="twitter:description" content="resturnat website" />
+<meta name="twitter:image:src" content="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1">
+<meta name="twitter:domain" content="https://esraaahmed422.github.io/Restaurant_website/">
 	<!-- custom css file link -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 
