--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Restaurant website template with html and css</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-	<meta property="og:image" content="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1">
-	<meta property="og:site_name" content="$site_name" />
-<meta property="og:url" content="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1" />
-<meta property="og:type" content="website" />
-<meta name="title" property="og:title" content="resturant website" />
-<meta name="image" property="og:image" content="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1"/>
-<meta property="og:image:type" content="image/png">
-<meta property="og:image:width" content="1024">
-<meta property="og:image:height" content="1024">
-<meta name="description" property="og:description" content="responsive resturant website " />
-<meta name="twitter:card" content="this's webs ite for testing" />
-<meta name="twitter:site" description="@albhoffy" />
-<meta name="twitter:title" content="resturant" />
-<meta name="twitter:description" content="resturnat website" />
-<meta name="twitter:image:src" content="https://th.bing.com/th/id/OIP.Zv_YROiKLchsNNIZN4QG2QHaE8?pid=ImgDet&rs=1">
-<meta name="twitter:domain" content="https://esraaahmed422.github.io/Restaurant_website/">
+
+	    <meta property="og:url" content="https://www.w3schools.com/html/exercise.asp">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="W3Schools HTML Exercise">
+    <meta property="og:description" content="I completed all the HTML exercises on w3schools.com">
+    <meta property="og:image" content="https://www.w3schools.com/images/w3schools_logo_436_2.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="436">
+    <meta property="og:image:height" content="228">
+    <link rel="icon" href="https://www.w3schools.com/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#04aa6d">
+    <meta name="msapplication-TileColor" content="#00a300">
+    <meta name="theme-color" content="#ffffff">
+
+	
 	<!-- custom css file link -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 
