--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 	<title>Restaurant website template with html and css</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-	    <meta property="og:url" content="https://www.w3schools.com/html/exercise.asp">
+	<meta property="og:title" content="How to set GitHub credentials for macOS">
+<meta property="og:description" content="Set up GitHub authentication so you can use it from VS Code or the command line">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://flaviocopes.com/setup-github-credentials-macos/">
+<meta property="og:image" content="https://flaviocopes.com/img/avatar.png"/>
+
+<!-- 	    <meta property="og:url" content="https://www.w3schools.com/html/exercise.asp">
     <meta property="og:type" content="website">
     <meta property="og:title" content="W3Schools HTML Exercise">
     <meta property="og:description" content="I completed all the HTML exercises on w3schools.com">
@@ -22,7 +28,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#04aa6d">
     <meta name="msapplication-TileColor" content="#00a300">
     <meta name="theme-color" content="#ffffff">
-
+ -->
 	
 	<!-- custom css file link -->
 	<link rel="stylesheet" type="text/css" href="style.css">
