--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <div class="about-content container">
             <div class="about-imageContent">
-<!--                 <img src="img/About2.jpg" alt="" class="about-img"> -->
+                <img src="img/About2.jpg" alt="" class="about-img">
                 <div class="aboutImg-textBox">
                     <p class="content-description">I really love your restaurant. Every day you upload new dishes and fresh food.</p>
                 </div>
