--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
 					</div>
 				</div>
 
-                
 				<div class="swiper-slide slide slide4">
 					<div class="content">
                         <div class="content4">
@@ -129,7 +128,41 @@
 		</div>
 	</div>
 	<!-- Home section ends -->
-    <img title="home image for appearing when sending page link" style="position:absolute; left:-1; width:0; heihgt: 0;" src="https://th.bing.com/th/id/OIP.vl5RiKROnJ_hIvvE0L4elQHaEK?pid=ImgDet&rs=1">
+
+    <!-- Level Food Section start-->
+    <section id="Level Food" class="Level Food">
+        <div class="container" data-aos="fade-up">
+
+          <div class="section-container">
+            <h3>Our level food standard</h3>
+            <div class="container">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit debitis, maxime laborum deserunt, eos alias eveniet eaque hic consequatur eius quod dolores repellendus possimus harum dolorem nostrum quis mollitia cupiditate.
+                </p>
+            </div>
+          </div>
+  
+          <div class="level-food">
+  
+            <div class="level1">
+              <img src="img/Breakfast.webp">
+                <a href="#">Breakfast</a>
+            </div>
+  
+            <div class="level2">
+                <img src="img/lunch.webp">
+                <a href="#">Lunch</a>
+            </div>
+  
+            <div class="level3">
+                <img src="img/dinner.webp">
+                <a href="#">Dinner</a>
+            </div>
+  
+          </div>
+        </div>
+    </section>
+    <!-- Level Food Section End -->
+
     <!-- About Section start-->
     <section class="section about" id="about">
         <h2 class="about-heading">about</h2>
@@ -176,26 +209,42 @@
             <div>
               <div class="box">
                 <span>01</span>
-                <h4>Breakfast</h4>
-                <p>We know that breakfast is described as the most important meal of the day, and we care about your health, so you will find with us all our delicious breakfast items.</p>
+                <h4>Professional and experienced chefs</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam eaque quibusdam aut iusto voluptatum, quis dignissimos modi accusamus dolorum quisquam? Repudiandae in velit eveniet repellat consequuntur.</p>
               </div>
             </div>
   
             <div>
               <div class="box">
                 <span>02</span>
-                <h4>Lunch</h4>
-                <p>We offer you ready-made meals with a stunning look because we consider them to be one of the most delicious meals, so our restaurant ranks first in our list of the best restaurant sites</p>
+                <h4>Fresh ingredients from organic farms</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum minus, quaerat doloremque sunt voluptates temporibus ex? Nihil quasi quisquam dignissimos atque aspernatur esse numquam. Facere esse repudiandae in.</p>
               </div>
             </div>
   
             <div>
               <div class="box">
                 <span>03</span>
-                <h4>Dinner</h4>
-                <p>We offer you healthy, delicious snacks in different varieties with a stunning appearance <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat eaque</p>
+                <h4>Special express delivery. 30 minutes max</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, reiciendis tempora odit fuga consectetur, vel sed a, eveniet aliquam aliquid labore illo corrupti aut nulla ullam enim aspernatur vitae iusto.</p>
               </div>
             </div>
+
+                <div class="box4">
+                    <div class="box">
+                      <span>04</span>
+                      <h4>We are located in the city center</h4>
+                      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, ipsum, facilis placeat ea ducimus quae sapiente inventore omnis eaque nihil quaerat officia eligendi a! Excepturi, illum? Nostrum deserunt nemo saepe!</p>
+                    </div>
+                </div>
+
+                <div class="box5">
+                    <div class="box">
+                      <span>05</span>
+                      <h4>The highest standards of service</h4>
+                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet ut atque illo quia aliquam praesentium doloremque veniam nobis, sunt rem cumque. Recusandae, vero eius libero aperiam velit consequuntur consequatur voluptates!</p>
+                    </div>
+                </div>
   
           </div>
         </div>
