--- a/index.html
+++ b/index.html
@@ -1240,13 +1240,13 @@
                             <option>5 people</option>
 						</select>
                         
-                        <input type="text" name="" placeholder="Time">
+                        <input type="datetime" name="" placeholder="Time">
 						<input type="text" name="" placeholder="Phone">
 					</div>
 
 					<div>
+                        <input type="text" name="" placeholder="Name">
 						<input type="text" name="" placeholder="Date">
-						<input type="text" name="" placeholder="Name">
 						<input type="email" name="" placeholder="email">
 					</div>
 				</div>
