--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <!-- header section start -->
     <header>
-        <a href="#" class="logo"><img src="img/logo.png" alt="logo" style="width: 50px; vertical-align: -50%;">Restaurant</a>
+        <a href="#" class="logo"><img src="img/restaurant.png" alt="logo" style="width: 50px; vertical-align: -50%;">Restaurant</a>
 
 		<nav class="navbar">
 			<a href="#home" class="active">home</a>
@@ -1537,7 +1537,7 @@
     
                 </form>
     
-                <form action="" class="form-right" style="background-image: url('img/contact_!.webp');background-repeat: no-repeat; background-size: cover;">
+                <form action="" class="form-right" style="background-image: url('img/contact.webp');background-repeat: no-repeat; background-size: cover;">
                 </form>
 
             </div>
